try adding plotly

--- a/index.html
+++ b/index.html
@@ -258,6 +258,17 @@ callbacks.shift()();
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="" id="slide-4" style="background:;">
+  <hgroup>
+    <h3>Plotly test</h3>
+  </hgroup>
+  <article data-timings="">
+    <p><center><iframe scrolling='no' seamless='seamless' style='border:none' src='https://plot.ly/~MattSundquist/1971/800/1200' width='800' height='1200'></iframe><center></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -278,6 +289,12 @@ callbacks.shift()();
       <a href="#" target="_self" rel='tooltip' 
         data-slide=3 title='Motion chart'>
          3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Plotly test'>
+         4
       </a>
     </li>
   </ul>
